--- a/material-kit-master/pages/recipe.html
+++ b/material-kit-master/pages/recipe.html
@@ -109,7 +109,9 @@ The above copyright notice and this permission notice shall be included in all c
                       class="dropdown-menu"
                       aria-labelledby="navbarDropdownMenuLink"
                     >
-                      <option class="dropdown-item" href="javascript:;">Cuisine</option>
+                      <option class="dropdown-item" href="javascript:;">
+                        Cuisine
+                      </option>
                       <option class="dropdown-item" href="javascript:;">
                         Ingredients
                       </option>
@@ -130,15 +132,54 @@ The above copyright notice and this permission notice shall be included in all c
       <div class="container">
         <div class="section text-center">
           <div class="row">
-            <div class="col-md-8 ml-auto mr-auto">
+            <div class="col-md-12 ml-auto mr-auto">
               <h2 class="title">Recipes</h2>
-              <h5 class="description">
-                This is the paragraph where you can write more details about
-                your product. Keep you user engaged by providing meaningful
-                information. Remember that by this time, the user is curious,
-                otherwise he wouldn&apos;t scroll to get here. Add a button if
-                you want the user to see more.
-              </h5>
+              <h5 class="description">Choose your favourite!</h5>
+              <div id="recipe-list" class="recipe-list"></div>
+              <script>
+                getSearch();
+              </script>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="featured-recipe">
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="exampleModalLong"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="exampleModalLongTitle"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLongTitle"></h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body" id="modal-body"></div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-dismiss="modal"
+              >
+                Close
+              </button>
+              <button type="button" class="btn btn-primary">
+                Choose
+              </button>
             </div>
           </div>
         </div>
