--- a/material-kit-master/pages/connect.html
+++ b/material-kit-master/pages/connect.html
@@ -22,7 +22,7 @@ The above copyright notice and this permission notice shall be included in all c
   />
   <link rel="icon" type="image/png" href="../assets/img/favicon.png" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <title>Material Kit by Creative Tim</title>
+  <title>CookNConnect</title>
   <meta
     content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     name="viewport"
@@ -57,7 +57,7 @@ The above copyright notice and this permission notice shall be included in all c
           class="navbar-brand"
           href="https://demos.creative-tim.com/material-kit/index.html"
         >
-          Cook and Connect
+          CookNConnect
         </a>
         <button
           class="navbar-toggler"
