--- a/material-kit-master/pages/meeting.html
+++ b/material-kit-master/pages/meeting.html
@@ -22,7 +22,7 @@ The above copyright notice and this permission notice shall be included in all c
     />
     <link rel="icon" type="image/png" href="../assets/img/favicon.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Material Kit by Creative Tim</title>
+    <title>CookNConnect</title>
     <meta
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
       name="viewport"
@@ -57,7 +57,7 @@ The above copyright notice and this permission notice shall be included in all c
             class="navbar-brand"
             href="https://demos.creative-tim.com/material-kit/index.html"
           >
-            Cook and Connect
+            CookNConnect
           </a>
           <button
             class="navbar-toggler"
@@ -138,19 +138,99 @@ The above copyright notice and this permission notice shall be included in all c
                   <div class="card-body ">
                     <div class="tab-content text-center">
                       <div class="tab-pane active" id="recipe">
-                        <p>1</p>
+                        <h2>Easy Fried Rice</h2>
+                        <div class="row card-row">
+                            <div class="ingredients recipe-block">
+                                <h4>Ingredients:</h4>
+                                <ul>
+                                    <li>3 tablespoons butter, divided</li>
+                                    <li>2 eggs, whisked</li>
+                                    <li>2 medium carrots, peeled and diced</li>
+                                    <li>1 small white onion, diced</li>
+                                    <li>1/2 cup frozen peas</li>
+                                    <li>3 cloves garlic, minced</li>
+                                    <li>salt and black pepper</li>
+                                    <li>4 cups cooked and chilled rice</li>
+                                    <li>3 green onions, thinly sliced</li>
+                                    <li>3–4 tablespoons soy sauce, to taste</li>
+                                    <li>2 teaspoons oyster sauce (optional)</li>
+                                    <li>1/2 teaspoons toasted sesame oil</li>
+                                </ul>
+                            </div>
+                            <img src="../assets/img/94181c80518eecdff7b058a46bf30a7b.jpg" class="food-image">
+                            <div class="instructions recipe-block">
+                                <h4>Instructions:</h4>
+                                <ol>
+                                    <li>
+                                        Heat 1/2 tablespoon of butter in a large sauté pan* over medium-high heat 
+                                        until melted. Add egg, and cook until scrambled, stirring occasionally. Remove 
+                                        egg, and transfer to a separate plate.
+                                    </li>
+                                    <li>
+                                        Add an additional 1 tablespoon butter to the pan and heat until melted. Add 
+                                        carrots, onion, peas and garlic, and season with a generous pinch of salt and 
+                                        pepper. Sauté for about 5 minutes or until the onion and carrots are soft. 
+                                        Increase heat to high, add in the remaining 1 1/2 tablespoons of butter, 
+                                        and stir until melted. 
+                                    </li>
+                                    <li>
+                                        Immediately add the rice, green onions, soy sauce and oyster sauce (if using), 
+                                        and stir until combined. Continue sautéing for an extra 3 minutes to fry the rice, 
+                                        stirring occasionally.  (I like to let the rice rest for a bit between stirs so 
+                                        that it can crisp up on the bottom.)  Then add in the eggs and stir to combine. 
+                                        Remove from heat, and stir in the sesame oil until combined. 
+                                    </li>
+                                    <li>
+                                        Serve immediately, or refrigerate in a sealed container for up to 3 days
+                                    </li>
+                                </ol>
+                            </div>
+                        </div>
                       </div>
                       <div class="tab-pane" id="upgrade">
                         <p>2</p>
                       </div>
                       <div class="tab-pane" id="location">
-                        <p>3</p>
+                        <h2>Ready To Go?</h2>
+                        <h5>Decide a meeting location to exchange meals with your match in the chat below!</h5>
+                        <div class="row card-row">
+                            <div class="recipe-block">
+                                <h5>Enter your meeting location below:</h5>
+                                <img src="../assets/img/thread-12995880-4144155970824791440.jpg" class="map-image">
+                            </div>
+                            <div class="recipe-block">
+                                <h5>Please be sure to:</h5>
+                                <ul>
+                                    <li>Wear a mask covering your nose and chin</li>
+                                    <li>Wash hands before and after handling food</li>
+                                    <li>Socially distance from your match, at least 6 feet</li>
+                                </ul>
+                                <h5>Select one of the following:</h5>
+                                <ul>
+                                    <li>Picnic (weather permitting)</li>
+                                    <li>Exchange food and video chat at home</li>
+                                </ul>
+                            </div>
+                        </div>
                       </div>
                       <div class="tab-pane" id="video">
-                        <p>4</p>
+                        <h2>Connect</h2>
+                        <h5>Please connect with your match to confirm communication platform.</h5>
+                        <div class="recipe-block">
+                            <h5>Suggested platforms include:
+                            <ul>
+                                <li>Facebook messenger</li>
+                                <li>Zoom</li>
+                                <li>Microsoft Teams</li>
+                                <li>Google Duo</li>
+                            </ul>
+                        </div>
                       </div>
                     </div>
                   </div>
+                </div>
+                <div class="chat">
+                    <h3>Chat with your match!</h3>
                 </div>
               </div>
             </div>
