--- a/material-kit-master/pages/home.html
+++ b/material-kit-master/pages/home.html
@@ -22,7 +22,7 @@ The above copyright notice and this permission notice shall be included in all c
     />
     <link rel="icon" type="image/png" href="../assets/img/favicon.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Material Kit by Creative Tim</title>
+    <title>CookNConnect</title>
     <meta
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
       name="viewport"
@@ -57,7 +57,7 @@ The above copyright notice and this permission notice shall be included in all c
             class="navbar-brand"
             href="https://demos.creative-tim.com/material-kit/index.html"
           >
-            Cook and Connect
+            CookNConnect
           </a>
           <button
             class="navbar-toggler"
@@ -79,144 +79,30 @@ The above copyright notice and this permission notice shall be included in all c
       class="page-header header-filter"
       data-parallax="true"
       style="
-        background-image: url('../assets/img/00well-jaffe-superJumbo-v2.jpg');
+        background-image: url('../assets/img/maarten-van-den-heuvel-EzH46XCDQRY-unsplash.jpg');
       "
     >
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <h1 class="title">Connect with Someone</h1>
+            <h1 class="title">Welcome to CookNConnect</h1>
             <h4>
-              The following are the people who chose the same recipe as you!
+              A website built to bring people together with something we all have in common. FOOD! All you have to 
+              do is choose a recipe from our list and we will connect you with someone cooking the same one. Gather your
+              ingredients, cook and have a instant icebreaker with a soon to be new friend.
             </h4>
+            <a href="./recipe.html">
+              <button type="button" class="btn btn-primary">
+                Pick you recipe
+              </button>
+            </a>
             <br />
           </div>
         </div>
       </div>
     </div>
 
-    <div class="main main-raised">
-      <div class="container">
-        <div class="section text-center">
-          <div class="row">
-            <div class="col-md-12 ml-auto mr-auto page-rows">
-              <div class="col-md-6">
-                <div class="card">
-                  <div class="card-header card-header-text card-header-primary">
-                    <div class="card-text">
-                      <h4 class="card-title">John Doe</h4>
-                    </div>
-                  </div>
-                  <div class="card-body card-rows">
-                    <div>
-                      <img
-                        src="../assets/img/faces/christian.jpg"
-                        class="img-raised rounded img-fluid"
-                      />
-                    </div>
-                    <div>
-                      <h4>
-                        A short bio about themselves, culinary experience,
-                        favourite dishes, etc.
-                      </h4>
-                      <a href="./meeting.html">
-                        <button type="button" class="btn btn-primary">
-                            Connect
-                        </button>
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="card">
-                  <div class="card-header card-header-text card-header-primary">
-                    <div class="card-text">
-                      <h4 class="card-title">Jane Doe</h4>
-                    </div>
-                  </div>
-                  <div class="card-body card-rows">
-                    <div>
-                      <img
-                        src="../assets/img/faces/avatar.jpg"
-                        class="img-raised rounded img-fluid"
-                      />
-                    </div>
-                    <div>
-                      <h4>
-                        A short bio about themselves, culinary experience,
-                        favourite dishes, etc.
-                      </h4>
-                      <a href="./meeting.html">
-                        <button type="button" class="btn btn-primary">
-                            Connect
-                        </button>
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="card">
-                  <div class="card-header card-header-text card-header-primary">
-                    <div class="card-text">
-                      <h4 class="card-title">John Deer</h4>
-                    </div>
-                  </div>
-                  <div class="card-body card-rows">
-                    <div>
-                      <img
-                        src="../assets/img/faces/card-profile1-square.jpg"
-                        class="img-raised rounded img-fluid"
-                      />
-                    </div>
-                    <div>
-                      <h4>
-                        A short bio about themselves, culinary experience,
-                        favourite dishes, etc.
-                      </h4>
-                      <a href="./meeting.html">
-                        <button type="button" class="btn btn-primary">
-                            Connect
-                        </button>
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="card">
-                  <div class="card-header card-header-text card-header-primary">
-                    <div class="card-text">
-                      <h4 class="card-title">Jaime Deer</h4>
-                    </div>
-                  </div>
-                  <div class="card-body card-rows">
-                    <div>
-                      <img
-                        src="../assets/img/faces/card-profile5-square.jpg"
-                        class="img-raised rounded img-fluid"
-                      />
-                    </div>
-                    <div>
-                      <h4>
-                        A short bio about themselves, culinary experience,
-                        favourite dishes, etc.
-                      </h4>
-                      <a href="./meeting.html">
-                        <button type="button" class="btn btn-primary">
-                            Connect
-                        </button>
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+   
 
     <footer class="footer footer-default">
       <div class="container">
